--- a/homepage/css/style2.css
+++ b/homepage/css/style2.css
@@ -4,44 +4,53 @@ body {
     color: #333;
 }
 
+/*電話番号からお問い合わせまで共通化しました*/
+.info {
+    display: flex;
+    align-items: center;
+    color: #000000;
+}
+/* ヘッダー部分を個別で */
+.header-info {
+    font-size: 21px;
+    gap: 20px;
+}
+
 .header-bar {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    gap: 300px;
-}
-
-.header-info {
-    display: flex; 
-    align-items: center;
-    gap: 30px;
+    gap: 280px;
 }
 
 .header-tel {
     text-align: left;
     font-size: 13px;
+    color: #000000;
     margin: 0;
 }
 
+/* ボタンも共通化しました */
 .contact-btn {
     background: red;
     color: white;
-    padding: 10px 40px;
     border-radius: 2px;
-    font-weight: bold;
     text-decoration: none;
+}
+/* ヘッダーの問い合わせボタン */
+.header-btn {
+    padding: 10px 40px;
     font-size: 15px;
-    
 }
 
 .header-img {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("../img/photo-sky.jpg");
+    background: url("../img/photo-sky.jpg") no-repeat;
+    background-size: cover;
     height: 350px;
-    width: 100%;
 }
 
 .catchcopy {
@@ -50,14 +59,32 @@ body {
     text-shadow: 0 1px 6px rgba(0,0,0,0.2);
     letter-spacing: 0.1em;
     opacity: 0.75;
+    text-align: center;
 }
 
 .division-line {
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     background-color: rgb(172, 171, 171);
     height: 50px;
+    text-align: center;
+}
+
+/* 疑似要素として追加 */
+.division-line::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    /* ←左右透明、上辺だけ色付きの三角形 */
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 10px solid rgb(172, 171, 171);
 }
 
 .line-text {
@@ -73,11 +100,13 @@ body {
     background: #fff;
     padding: 48px 0 38px 0;
 }
+
 .circle-block {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .circle {
     width: 160px;
     height: 160px;
@@ -92,34 +121,22 @@ body {
     position:relative;
 }
 
-/* 変更点 */ 
-.arrow {
-    font-size: 20px;
-    color: #888;
-    position: relative;
-    /* 追加項目 */
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.arrow::before {
+.circle::before {
     content: '';
+    position: absolute;
     width: 15px;
     height: 15px;
     border: 0;
     border-bottom: solid 3px #333;
     border-right: solid 3px #333;
     transform: rotate(45deg);
-    position: absolute;
-    top: 50px;
+    top: 65%;
     right: 0;
     left: 0;
     bottom: 0;
     margin: auto;
 }
 
-/* relative, absoluteに変更 */
 .circle span {
     position:absolute;
     text-align: center;
@@ -129,30 +146,37 @@ body {
 
 .columns {
     width: 100%;
+    
 }
 
+/* 修正位置 */
 .column {
     display: flex;
     flex-wrap: wrap;
-    min-height: 220;
+    min-width: 50%;
+    /* columsにつけると1,2番目の画像がテキストのほうにはみ出てくるので、
+    column位置につけました */
+    overflow: hidden;
 }
+
 
 .left-img .img-area,
 .right-img .img-area {
     min-width: 50%;
-    min-height: 250px;
-    
+    max-width: 50%;
+    max-height: 250px;
 }
 
-.left-img.col-1 {
-    background: url("../img/photo-pc.jpg");
-}
 .right-img {
-    background: url("../img/photo-note.jpg");
     flex-direction: row-reverse;
 }
-.left-img.col-2 {
-    background: url("../img/photo-hands.jpg");
+
+/*修正済み object-fitを付けて縦横比率をそのままにしました*/
+.col-responsive-img {
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+    object-fit: cover;
 }
 
 .column-text {
@@ -166,46 +190,46 @@ body {
 footer {
     background: #fff;
 }
+
 .footer-bar {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 100px;
     background: #b1b1b1;
-    padding: 24px;
-    width: 65%;
+    padding: 26px;
+    /* width: 55%; */
     margin: 0 auto;
-    margin-bottom: 70px;
-    margin-top: 70px;
+    margin: 70px 16%;
     text-align: left;
 }
 
-.footer-text {
-    font-size: 20px;
-    margin: 0;
+/* フッダー部分を個別で */
+.footer-info {
+    font-size: 22px;
+    gap: 100px;
+}
+/* フッダー個別の電話番号を小さく */
+.tel {
+    display: block;
+    font-size: 0.6em;
+    line-height: 1;
 }
 
+/* 削除しました */
 .footer-btn {
-    background: #ff1500;
-    color: #fff;
-    padding: 18px 75px;
-    border-radius: 2px;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
+    padding: 18px 78px;
+    font-size: 15px;
     transition: opacity .3s;
+    text-align: center;
 }
 
-.footer-btn:hover {
-    opacity: 0.7;
-    font-size: 5px;
-}
 .copyright {
     display: flex;
     height: 70px;
     width: 100%;
     background-color: rgb(172, 171, 171);
 }
+
 .copyright-text {
     align-self: center;
     text-align: left;
